--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,9 @@
     "start": "nodemon index.js"
   },
   "keywords": [],
+  "engines": {
+    "node": "16.16.0"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -16,6 +19,7 @@
     "expo-server-sdk": "^3.6.0",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
+    "heroku": "^7.63.0",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "mysql-ssh": "^1.0.6",
